tests/NormalTests/paczka1/small_fuzzy/15184959.err
Error in line 1: 0bJKoelal3 A20 44,2
Error in line 3: ak0I A37 19,7
